SERVER-66529 OplogManager must not release mutex, so as to avoid wrongly fowarding the oplogReadTimestamp after a cappedTruncateAfter operation sets it back.

(cherry picked from commit d9e643fe4dfb7da4ab68d6929477613f244ad361)